<resources>
    <string name="app_name">ChimboteFood</string>

    <string name="home_title">Chimbote</string>
    <string name="home_description">Chimbote es una ciudad portuaria en la región de Ancash, en el norte de Perú. Es conocida por sus fábricas de pescado y como centro de transporte regional. La gran Catedral Nuestra Señora del Carmen y San Pedro Apóstol exhibe elaborado arte religioso. Cerca, el Malecón está en frente de Isla Blanca, una pequeña isla no habitada, a la que se puede acceder en bote. La ciudad sirve como punto de partida de la ruta hacia Huaraz a través de los túneles de montaña del Cañón del Pato.</string>
    <string name="home_title2">Clima</string>
    <string name="home_description2">Chimbote tiene veranos cortos, calientes, áridos y nublados e inviernos largos, frescos, secos y parcialmente nublado. La mejor época para realizar turismo en Chimbote es desde principios de Abril hasta mediados de Septiembre</string>
    <string name="home_title3">Lugares Turísticos</string>
    <string name="home_description3">Chimbote tiene un hermoso espacio, que naturalmente es el principal protagonista, entre los lugares más bonitos a visitar se encuentra la Isla Blanca, la cual posee aguas tranquilas de color azul y montañas rocosas que la rodean, también como una buena opción a visitar podemos encontrar el Vivero Forestal, el cuál es un parque ideal para pasar un día en familia por los múltiples atractivos que posee.</string>
    <string name="home_title4">Platos típicos</string>
    <string name="home_description4">Chimbote es un destino que no solo encanta por sus lugares turísticos y biodiversidad, sino también por su gastronomía. Debido a ello es que si visitas este lugar debes de probar sus potajes más tradicionales debido a que tienen una sazón única. Puedes enterarte más acerca de estos platos típicos en la sección de PLATOS TÍPICOS.</string>

    <string name="acercade_title">Acerca De</string>
    <string name="acercade_description">ChimboteFood es una aplicación que ofrece toda la información acerca de los platos típicos del Distrito de Chimbote.</string>


    <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string translatable="false" name="button_text_enable_depth">Enable</string>
    <string translatable="false" name="button_text_disable_depth">Disable</string>
    <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
    <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
    <string translatable="false" name="done">Done</string>
    <string-array translatable="false" name="depth_options_array">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>
    <string-array translatable="false" name="instant_placement_options_array">
        <item>Enable Instant Placement</item>
    </string-array>

</resources>